--- a/Bierbank/View/BierenOverzicht.xaml
+++ b/Bierbank/View/BierenOverzicht.xaml
@@ -21,11 +21,20 @@
             <TextBox  Margin="10" Text="{Binding Search, UpdateSourceTrigger=PropertyChanged}"/>
         </DockPanel>
 
+        <TextBlock Name="ImageRoot" Text="{Binding Root}" Visibility="Collapsed"/>
+
         <ListView Grid.Row="1" Margin="20" ItemsSource="{Binding Biertjes}" SelectedItem="{Binding SelectedBiertje}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal" Margin="5">
-                        <TextBlock Name="ImageName" Visibility="Collapsed" Text="{Binding Image}" />
+                        <TextBlock Name="ImageName" Visibility="Collapsed">
+                            <TextBlock.Text>
+                                <MultiBinding StringFormat="{}{0}{1}">
+                                    <Binding ElementName="ImageRoot" Path="Text"/>
+                                    <Binding Path="Image"/>
+                                </MultiBinding>
+                            </TextBlock.Text>
+                        </TextBlock>
 
                         <Rectangle Height="60" Width="50" Stroke="{DynamicResource ToolBarKleur}" StrokeThickness="2">
                             <Rectangle.Fill>
