--- a/Bierbank/View/BierDetail.xaml
+++ b/Bierbank/View/BierDetail.xaml
@@ -72,7 +72,14 @@
             </i:Interaction.Triggers>
         </ListView>
 
-        <TextBlock Name="ImageName" Visibility="Collapsed" Text="{Binding SelectedBiertje.Image}" />
+        <TextBlock Name="ImageName" Visibility="Collapsed">
+            <TextBlock.Text>
+                <MultiBinding StringFormat="{}{0}{1}">
+                    <Binding Path="Root"/>
+                    <Binding Path="SelectedBiertje.Image"/>
+                </MultiBinding>
+            </TextBlock.Text>
+        </TextBlock>
 
         <Button Grid.RowSpan="2" Grid.Row="0" Grid.Column="1" Name="KnopWijzigen" Content="Wijzigen" Margin="35" Style="{DynamicResource ToolBarButton}" Command="{Binding WijzigenCommand}"/>
 
